--- a/Ghost Sock/index.html
+++ b/Ghost Sock/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title></title>
+    <title>Ghost Sock</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <div class="outerContainer">
         <h3 class="written-in-ink"><a href="https://www.inklestudios.com/ink">WRITTEN IN INK</a></h3>
 
@@ -24,7 +25,7 @@
 
         <div id="story" class="container">
             <div class="header">
-                <h1></h1>
+                <h1>Ghost Sock</h1>
                 <h2 class="byline"></h2>
             </div>
         </div>
